fixed the tutorial (the "REVISE"-related sections) and also the dursor on the summary old alignments during the "REVISE" mode to be pointer

--- a/src/css_files/Annotation.css
+++ b/src/css_files/Annotation.css
@@ -203,7 +203,7 @@
 
 .cursor-pointer
 {
-    cursor:pointer;
+    cursor:pointer !important;
 }
 
 .cursor-span-doc
